linkedin/03_04_deploy_web/main.tf
data "aws_vpc" "default" { # data is actually resouces already existing in aws
    default = true
}

data "aws_ami" "app_ami" {
    most_recent = true

    filter {
        name   = "name"
        values = ["bitnami-tomcat-*-x86_64-hvm-ebs-nami"]
    }

    filter {
        name   = "virtualization-type"
        values = ["hvm"]
    }

    owners = ["979382823631"] # Bitnami
}

resource "aws_instance" "web" {
    ami           = data.aws_ami.app_ami.id
    instance_type = var.instance_type
    
    tags = {
        Name = "web"
    }
    
    # security_groups = [aws_security_group.web.name] #deprecated 
    vpc_security_group_ids = [ aws_security_group.web.id ]
}

resource "aws_security_group" "web" {
    name        = "web"
    description = "Allow http, https in, everything out"
    vpc_id      = data.aws_vpc.default.id
}

resource "aws_security_group_rule" "allow_http_in" {
    type              = "ingress"
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"] # defines what networks can access this port, in this case all ipv4 addresses
    security_group_id = aws_security_group.web.id
}


resource "aws_security_group_rule" "allow_https_in" {
    type              = "ingress"
    from_port         = 443
    to_port           = 443
    protocol          = "tcp"
    cidr_blocks       = ["0.0.0.0/0"]
    security_group_id = aws_security_group.web.id
}

resource "aws_security_group_rule" "allow_everything_out" {
    type              = "egress"
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = ["0.0.0.0/0"]
    security_group_id = aws_security_group.web.id
}
